# oddscal

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/oddscal/: __init__.py  devig.py  kelly.py  metrics.py  plots.py
tests/: test_devig.py  test_kelly.py  test_metrics.py
