[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oddscal"
version = "0.1.0"
description = "De-vigging, probability calibration metrics and Kelly staking for sports betting research"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Patryk Dąbek" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/patrykdabek02/oddscal"

[tool.hatch.build.targets.wheel]
packages = ["src/oddscal"]
